fixed layout and spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,13 @@
+.container {
+  margin-top: 100px;
+}
+
+body {
+  position: relative;
+}
+
+
+
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
