--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -6,10 +6,6 @@
 $blue: #2e84ea;
 
 .container {
-  margin-top: 100px;
-}
-
-body {
-  position: relative;
+  margin-top: 76px;
 }
 
