--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,8 +4,7 @@
   grid-template-columns: repeat(auto-fill, 300px);
   grid-auto-rows: 1fr;
   justify-content: center;
-  padding: 5px 30px;
-  margin-top: 100px;
+  padding: 0 30px 5px 30px;
   min-width: 100%;
   min-height: 40vh;
 
